# git-story

./: .gitignore  .task-progress.json  BUILD_PLAN.md  PRD.md  README.md  pyproject.toml
src/git_story/: __init__.py  __main__.py  cli.py  config.py  git_reader.py  llm.py
src/git_story/backends/: __init__.py  openai.py
tests/: test_cli.py  test_config.py  test_git_reader.py  test_llm_backend.py  test_openai_backend.py
