[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-story"
version = "0.1.0"
description = "Transform git history into PR-ready prose using LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["git", "changelog", "llm", "release-notes", "cli"]
authors = [
    {name = "git-story contributors"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1.0",
    "gitpython>=3.1.40",
    # tomli is the stdlib ``tomllib`` backport for Python < 3.11
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
openai = [
    "openai>=1.12.0",
]
anthropic = [
    "anthropic>=0.28.0",
]
all = [
    "git-story[openai,anthropic,dev]",
]

[project.scripts]
git-story = "git_story.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
